--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
-# Site
+# 网站信息
 title: 小何何的个人网站
 subtitle: ''
 description: ''
@@ -11,26 +11,25 @@ author: XiaoHeHe
 language: zh-CN
 timezone: ''
 
-# URL
-## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://it770.cn
+# 网址 \ URL
+url: http://it770.cn/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
-# Directory
-source_dir: source
-public_dir: public
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
+# 目录
+source_dir: source # 存放内容
+public_dir: public # 公共文件夹
+tag_dir: tags # 标签文件夹
+archive_dir: archives # 归档文件夹
+category_dir: categories # 分类文件夹
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
-# Writing
+# 文章
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
@@ -65,7 +64,7 @@ index_generator:
   per_page: 10
   order_by: -date
 
-# Category & Tag
+# 分类 & T标签
 default_category: uncategorized
 category_map:
 tag_map:
@@ -74,18 +73,18 @@ tag_map:
 ## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
 meta_generator: true
 
-# Date / Time format
+# 日期 / 时间格式
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
+date_format: YYYY-MM-DD # 日期格式
+time_format: HH:mm:ss # 时间格式
 ## updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
-# Pagination
+# 分页
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 10 # 每页显示的文章量
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -103,3 +102,11 @@ theme: pure
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+# Post wordcount显示设置
+#依赖性:https://github.com/willin/hexo-wordcount
+
+post_wordcount:
+item_text: true
+wordcount: true
+min2read: true
