--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
+    "hexo-generator-searchdb": "^1.3.4",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-less": "^2.0.2",
